# mondrian

./: .gitignore  Cargo.toml
examples/: bench.rs  effects.rs  image.data  shapes.rs  texture.rs  texture_sdf.rs
examples/examplelib/: Cargo.toml  lib.rs
examples/textures/: mondrian.data  mondrian.rgba  mtsdf.rgba  painting.rgba  sdf.rgba
src/: binner.rs  lib.rs  painter.rs  shape.rs
src/backend/: common.rs  main.wgsl  mod.rs  wgpu.rs
